Update My first login-page.html

--- a/My first login-page.html
+++ b/My first login-page.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sign Up | By Code Info</title>
+	  <h2> Made by Frank </h2> 
+    <title> Sign Up </title>
     <link rel="stylesheet" href="Css/style.css" />
 	<style>
 	body {
