--- a/Website.html
+++ b/Website.html
@@ -209,7 +209,7 @@
             </h4>
         </div>
         <div class="modal-body">
-            <textarea id="txt" class="form-control" placeholder="粘贴文本……"></textarea>
+            <textarea id="txt" class="form-control" placeholder="load"></textarea>
             <br>
             <div class="sub"><div class="input-group">
                 <span class="input-group-addon">add</span>
