Update News website example.html

--- a/News website example.html
+++ b/News website example.html
@@ -4,8 +4,8 @@
 Made By Frank
 -->
 	<head>
-		<title> SVT Sveriges Nyheter </title>
-		<p> 10 strange things that makes it dangerous to visit Sweden - SVT Swedich news platform </p>
+		<title> Made by Frank </title>
+		<p> Website example  </p>
 		
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
