Update News website example.html

--- a/News website example.html
+++ b/News website example.html
@@ -4,8 +4,8 @@
 Made By Frank
 -->
 	<head>
-		<title> Made by Frank </title>
-		<p> Website example  </p>
+		<title> website </title>
+		<p> Website example by Frank </p>
 		
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -54,7 +54,7 @@ Made By Frank
         <input type="text" placeholder="Email" />
         <input type="button" value="Login" />
 		
-   <h3> Choose a News-Time </h3> 
+   <h3> Choose a login - date </h3> 
     <input type="date">  
 		</div>          <h3> You can have a map in the website </h3> 
 						<div class="col-sm-12">
