--- a/News website example.html
+++ b/News website example.html
@@ -6,6 +6,7 @@ Made By Frank
 	<head>
 		<title> website </title>
 		<p> Website example by Frank </p>
+		<p> This site is good for adding news! </p> 
 		
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
