--- a/Deskop.html
+++ b/Deskop.html
@@ -750,7 +750,7 @@ $(document).on("mousemove", function(e){
  });
 alert("Right click added");
 alert("password is " + passwd) ;
-alert("Welcome to login to Server Fjx20");
+alert("Welcome to login to Desktop1");
     </script>
     </body>
 </html>
