--- a/Deskop.html
+++ b/Deskop.html
@@ -19,7 +19,7 @@
          </div>
          <div class="login">
          <img class="login_pic" src="https://api.sololearn.com/Uploads/Avatars/3268934.jpg" />
-      <span class="login_name">Server Fxj20</span>
+      <span class="login_name">Desktop 1</span>
       <input contenteditable="true" class="login_pass"  type="password" autocorrect="off" placeholder="Password" autofocus/> 
       <span class="sign_in">Sign in</span>
          </div>
